--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -262,7 +262,7 @@ border-bottom: 2px solid #e67e22;
 .meal-photo img {
     opacity: 0.7;
     width: 100%;
-    height: auto;
+    height: 300px;
     transform: scale(1.15);
     transition: transform 0.5s, opacity 0.5s;
 }
