--- a/assets/search.css
+++ b/assets/search.css
@@ -318,8 +318,8 @@ blockquote{
 
 h4#displayName{
     display: inline;
-    border-bottom: 1px solid #65D2A5;
-    color: #34C72A;
+    border-bottom: 1px solid   #e66f07;
+    color:  #e66f07;
     margin-left: 40px;
 }
 .main-nav {
