--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -195,9 +195,9 @@ header {
     .logo {
         height: 100px;
         width: auto;
-        float: left;
+        float: right;
         margin-top: 20px;
-        
+                
     }
     .main-nav {
         float:right;
