--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -196,8 +196,9 @@ header {
         height: 100px;
         width: auto;
         float: right;
-        margin-top: 20px;
-                
+        margin-top: 2px;
+        margin-left: 20px;
+      
     }
     .main-nav {
         float:right;
@@ -242,10 +243,12 @@ border-bottom: 2px solid #e67e22;
 /* ........................................... */
 .section-meals {
     padding: 0;
+    
 }
 .meals-showcase {
     list-style: none;
     width: 100%;
+   
 
 }
 .meals-showcase li {
@@ -346,7 +349,9 @@ border-bottom: 2px solid #e67e22;
     background-size: cover;
     color: white;
     background-attachment: fixed;
+    padding-left: 80px;
 }
+
 blockquote {
     padding: 2%;
     font-style: italic;
