--- a/assets/search.css
+++ b/assets/search.css
@@ -1,7 +1,7 @@
 #search_body,#search_box{
     background-color: #555;
-    padding-top: 5%;
-    padding-left: 2%;
+    padding-top: 2%;
+    padding-left: 3%;
     padding-right: 5%;
     padding-bottom: 2%;
     background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.91)), url(images/restaurant.jpg);
@@ -178,6 +178,9 @@ select{
 #logo{
     border-bottom: none;
 } 
+#logo_img{
+    margin-top: 0px !important;
+}
 
 #logo_img:hover{
     background-color: gray !important;
@@ -328,6 +331,12 @@ h4#displayName{
     margin-top: -60px;
     margin-right: 100px;
 }
+.main-nav-search {
+    float: right;
+    list-style: none;
+    margin-top: -90px;
+    margin-right: 30px;
+}
 
 input#signin_submit{
     margin-top:20px;
@@ -341,9 +350,15 @@ input#signin_submit{
 #contact_message{
     height: 200px;
 }
-#contact_sent_msg{
+#contact_status{
     margin-left: 81%;
     color: #2daf2d;
+    margin-top: 5px;
+    font-weight: 400;
+}
+#contact_status_error{
+    margin-left: 22%;
+    color: red;
     margin-top: 5px;
     font-weight: 400;
 }
