--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -487,6 +487,11 @@ footer {
 .footer-nav {
     list-style: none;
     float: left;
+    transform:translate(50%);
+}
+
+#copyright{
+    transform:translate(50%);
 }
 .social-links {
     list-style: none;
