--- a/views/places.handlebars
+++ b/views/places.handlebars
@@ -1,6 +1,9 @@
-    <div id="search_body2">
+
+      <div id="search_body3">
+         
+
             <div class="row">
-                <a id="logo" href="index.html"><img id="logo_img" src="resources/img/ts logo.jpg" alt="omnifood logo" class="logo rounded-circle"></a>
+                <a id="logo" href="index.html"><img id="logo_img" src="resources/img/ts logo.jpg" alt="toxic sushi logo" class="logo rounded-circle"></a>
             </div>
         <ul class="main-nav-search">
            <h4 id="displayName"></h4>
@@ -66,6 +69,7 @@
                     
                 </div>
             </div>
+           
             <div class="row">
                 <p>
                     Copyright &copy; 2020 by Toxic Sushi. All rights reserved.
