resized the balloon

--- a/public/css/search.css
+++ b/public/css/search.css
@@ -238,6 +238,9 @@ select{
 #result_container h4{
     display: inline;
 }
+#places_result_container h4{
+    display: inline;
+}
 
 .rating, .rating_value {
     color: #e3f132;
@@ -399,8 +402,8 @@ input#signin_submit{
     position: absolute;
     top: 100px;
     right: 1px;
-    width: 100px;
-    height: 100px;
+    width: 130px;
+    height: 210px;
     -webkit-transition: all 2s ease-in-out;
     transition: all 2s ease-in-out;
     z-index: 1;
@@ -423,7 +426,7 @@ input#signin_submit{
 }
 
 #search_keyword{
-    margin-bottom: 50px;
+    margin-bottom: 150px;
     margin-top: 50px;
     margin-left: 35%;
     height: 40px;
@@ -437,3 +440,6 @@ input#signin_submit{
     height: 40px;
     width: 100px;
 }
+
+
+
