--- a/public/css/search.css
+++ b/public/css/search.css
@@ -351,6 +351,42 @@ h4#displayName{
     margin-top: -60px;
     margin-right: 100px;
 }
+
+.dropdown{
+    float: right;
+    margin-top: -60px;
+    margin-right: 100px; 
+    color:#e66f07;
+}
+#sidebar{
+    position: fixed;
+    width:200px;
+    height:100%;
+    right:-200px;
+    transition: all 500ms linear;
+}
+#sidebar.active{
+    right :0px;
+}
+
+#sidebar ul li {
+    color:rgba(230,230,230,0.9);
+    list-style: none;
+    padding: 15px 10px;
+    border-bottom: 1px solid rgba(100,100,100,0.3);
+}
+#sidebar .toggle-btn {
+    position: absolute;
+    right: 250px;
+    top:20px;
+}
+#sidebar .toggle-btn span {
+    display: block;
+    width:30px;
+    height: 5px;
+    background: black;
+    margin:5px 0px;
+}
 .main-nav-search {
     float: right;
     list-style: none;
