--- a/public/css/search.css
+++ b/public/css/search.css
@@ -459,5 +459,12 @@ input#signin_submit{
     padding-left: 0px !important;
 }
 
+.fa-heart{
+    font-size: 30px;
+}
+
+a:link.heart_sign, a:visited.heart_sign{
+    border-bottom: none !important;
+}
 
 
