--- a/public/css/search.css
+++ b/public/css/search.css
@@ -502,6 +502,22 @@ a:link.heart_sign, a:visited.heart_sign{
     border-bottom: none !important;
 }
 
+.header-nav{
+    color:black;
+    font-size:20px;
+    font-weight:400;
+    position:absolute;
+    transform:translatey(10px);
+    border-bottom:none !important;
+
+}
+
+a:link.header_links, a:visited.header_links{
+    border-bottom:none !important;
+}
+
+
+
 
 
 
